# polars-splines

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml  publish.yml  release.yml  test.yml
docs/: index.md
examples/: examples.py
polars_splines/: __init__.py
src/: splines.rs
tests/: test_all.py
