[project]
name = "polars-splines"
description = "A polars expression plugin for splines"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mattias Matthiesen", email = "mattmatthi@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["splines", "interpolation", "polars"]
dynamic = ["version"]
dependencies = ["polars>=1.7,<2"]

[tool.maturin]
sdist-include = ["LICENSE", "README.md"]
features = ["pyo3/extension-module"]

[tool.uv]
dev-dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-gitbook>=0.0.1",
    "pymdown-extensions>=10.11.2",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

